--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -17,7 +17,8 @@
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
-    "com.unity.uiextensions": "2.3.2",
+    "com.unity.uiextensions": "2.3.3-pre.1",
+    "io.sentry.unity": "https://github.com/getsentry/unity.git#2.4.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
